Fix Docker deployment issues for Coolify